# kikande

./: Cargo.toml  README.md
src/: bao.rs  config.rs  display.rs  error.rs  lib.rs  macros.rs  main.rs  play.rs  search.rs
src/bao/: board.rs  direction.rs  game.rs  game_builder.rs  move_factory.rs  moves.rs  player.rs  pv.rs
src/search/: evaluate.rs  move_picker.rs  negamax.rs  node.rs  timer.rs  transposition_table.rs  zobrist.rs
